<resources>
    <string name="app_name">HaVagas</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="e_mail">E-mail</string>
    <string name="deseja_receber_atualiza_es_por_e_mail">Deseja receber atualizações por e-mail?</string>
    <string name="telefone">Telefone</string>
    <string name="comercial">Comercial</string>
    <string name="residencial">Residencial</string>
    <string name="adicionar_telefone_celular">Adicionar telefone celular</string>
    <string name="telefone_celular">Telefone Celular</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="outro">Outro</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="ano_de_formatura">Ano de Formatura</string>
    <string name="institui_o">Instituição</string>
    <string name="t_tulo_da_monografia">Título da Monografia</string>
    <string name="orientador">Orientador</string>
    <string name="vagas_de_interesse">Vagas de Interesse</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string-array name="formacao_array">
        <item>Fundamental</item>
        <item>Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>